modules: readme files regenerated - topos ... [skip ci]

--- a/src/modules/topos/README
+++ b/src/modules/topos/README
@@ -33,10 +33,12 @@ Daniel-Constantin Mierla
               3.6. dialog_expire (int)
               3.7. clean_interval (int)
               3.8. event_callback (str)
+              3.9. event_mode (int)
 
         4. Event Routes
 
               4.1. event_route[topos:msg-outgoing]
+              4.2. event_route[topos:msg-sending]
 
    List of Examples
 
@@ -48,7 +50,9 @@ Daniel-Constantin Mierla
    1.6. Set dialog_expire parameter
    1.7. Set clean_interval parameter
    1.8. Set event_callback parameter
-   1.9. Usage of event_route[topos:msg-outgoing]
+   1.9. Set event_mode parameter
+   1.10. Usage of event_route[topos:msg-outgoing]
+   1.11. Usage of event_route[topos:msg-sending]
 
 Chapter 1. Admin Guide
 
@@ -70,10 +74,12 @@ Chapter 1. Admin Guide
         3.6. dialog_expire (int)
         3.7. clean_interval (int)
         3.8. event_callback (str)
+        3.9. event_mode (int)
 
    4. Event Routes
 
         4.1. event_route[topos:msg-outgoing]
+        4.2. event_route[topos:msg-sending]
 
 1. Overview
 
@@ -119,6 +125,7 @@ Chapter 1. Admin Guide
    3.6. dialog_expire (int)
    3.7. clean_interval (int)
    3.8. event_callback (str)
+   3.9. event_mode (int)
 
 3.1. storage (str)
 
@@ -227,9 +234,23 @@ function ksr_topos_event(evname)
 end
 ...
 
+3.9. event_mode (int)
+
+   Control what event_route blocks to be executed. It is a bitmask of: 1 -
+   execute event_route[topos:outgoing]; 2 - execute
+   event_route[topos:sending].
+
+   Default value is 3 (execute both event_route blocks).
+
+   Example 1.9. Set event_mode parameter
+...
+modparam("topos", "event_mode", 2)
+...
+
 4. Event Routes
 
    4.1. event_route[topos:msg-outgoing]
+   4.2. event_route[topos:msg-sending]
 
 4.1. event_route[topos:msg-outgoing]
 
@@ -243,10 +264,29 @@ end
    reparsing the outgoing SIP message for the cases when topology hiding
    is not wanted.
 
-   Example 1.9. Usage of event_route[topos:msg-outgoing]
+   Example 1.10. Usage of event_route[topos:msg-outgoing]
 ...
 event_route[topos:msg-outgoing] {
   if($sndto(ip)=="10.1.1.10") {
+    drop;
+  }
+}
+...
+
+4.2. event_route[topos:msg-sending]
+
+   It is executed before doing topology stripping processing for a SIP
+   message to be sent out, being executed after
+   event_route[topos:sending].
+
+   Inside the event route the variables $sndto(ip), $sndto(port) and
+   $sndto(proto) point to the destination. The SIP message is the one to
+   be sent out.
+
+   Example 1.11. Usage of event_route[topos:msg-sending]
+...
+event_route[topos:msg-sending] {
+  if(is_request() and $fU=="alice") {
     drop;
   }
 }
